fix long url stretch too wide

--- a/src/styles/comment.module.css
+++ b/src/styles/comment.module.css
@@ -4,6 +4,7 @@ details .comment {
 
 .comment a {
   color: #f60; /* hsl 24, 100, 50*/
+  word-break: break-word;
 }
 
 .comment a:hover {
